# ICE-BA

App/: CMakeLists.txt  ice_ba_player_node.cpp  package.xml
App/launch/: euroc.launch  euroc_gdb.launch  mynt.launch
App/src/: Config.cpp  Config.h  FeatureTracking.cpp  FeatureTracking.h  Frame.cpp  Frame.h  LocalBA.cpp  LocalBA.h  System.cpp  System.h  Viewer.cpp  Viewer.h  ros_utility.h  utility.h
Backend/: CMakeLists.txt  package.xml
Frontend/: CMakeLists.txt  package.xml
config/: rviz_config.rviz
config/MYNT/: mynt_config.yaml
config/euroc/: euroc_config.yaml
