<?xml version="1.0"?>
<package>
  <name>ice_ba_backend</name>
  <version>0.0.0</version>
  <description>
    ICE-BA: Incremental, Consistent and Efficient Bundle Adjustment for Visual-Inertial SLAM - Backend
  </description>
  <author>Yi-Ren Liu</author>
  <maintainer email="yiren.liu@bitmain.com">Yi-Ren Liu</maintainer>
  <license>Apache 2.0</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. use build_depend -->
  <!-- Dependencies needed after this package is compiled. use run_depend -->
  <build_depend>cmake_modules</build_depend>  

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>systrace</build_depend> <!-- for profiling-->
  <run_depend>systrace</run_depend>
</package>
